k8s/ghost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost-gateway
  namespace: ghost-dmz
spec:
  parentRefs:
  - name: gateway-external
    namespace: gateway
  hostnames:
    - "koryalbert.net"
    - "www.koryalbert.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghost
          port: 2368
